--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,11 @@
     "version": "0.1.0",
     "configurations": [
         {
-            "name": "Launch index.html",
-            "type": "chrome",
+            "name": "Launch server",
+            "type": "node",
             "request": "launch",
-            "file": "index.html"
+            "file": "server.js",
+            "program": "server.js"
         }
     ]
 }
