--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
         "module": "commonjs",
         "target": "ES5",
         "sourceMap": true,
-        "out": "app/app.js"
+        "out": "public/core.js"
     }
 }
